[package]
name = "dx12-common"
version = "0.1.0"
authors = ["Jari Pennanen <ciantic@oksidi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "./bindings/"} 
windows = { git = "https://github.com/microsoft/windows-rs", version="*" }
directx_math = "*"

[workspace]
members = [
    "bindings"
]