[package]
name = "ex01-triangle"
version = "0.1.0"
authors = ["Jari Pennanen <ciantic@oksidi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "../bindings" }
dx12-common = { path = "../common" }
windows = { git = "https://github.com/microsoft/windows-rs" }
directx_math = "*"
# serde = { version = "*", features = ["derive"] }
# bincode = "*"